# hx-deploy-tool

./: .arcconfig  .gitignore  README.md  camus2.cabal  hx-deploy-tool.cabal  stack.yaml
adl/: config.adl  config.adl-hs  nginx.adl  nginx.adl-hs  release.adl  release.adl-hs  state.adl  state.adl-hs  types.adl
config/: nginx.conf.tpl
devdocs/: help.md  installation.md
doc/: help.md
docs/: 1-user-guide.md  example_deploy.json  help.ansi  help.md  index.md  installation.md  user-guide.md
docs/templates/: example_deploy_all_features.json  example_deploy_noproxy.json  example_deploy_simpleproxy.json  release.json
docs/userguide/: example.md  features.md  howitworks.md  index.md  minimum-requirements.md  mustachetags.md  proxy-example.md  simple-example.md
docs/userguide/1-welcome/: 1-introduction.md  2-motivation.md  3-features.md  4-howitworks.md  5-minimum-requirements.md
docs/userguide/2-stepbystepexamples/: 1-basic-example.md  2-proxy-example.md  3-remote-state-example.md
docs/userguide/3-reference/: 1-camus2-config.md  2-release-archive.md  3-templateanything.md
docs/userguide/4-howto/: 1-adding-ci.md  2-runningoutsideaws.md  3-runningmultipleapps.md  4-bestpracticeaws.md  5-tbd.md
docs/userguide/filestructures/: release-archive.md
docs/userguide/stepbystepexamples/: 1-simple-example.md  2-proxy-example.md  3-remote-state-example.md
scripts/: adlc  docker-build.sh  gen-adl.sh
src/: Blobs.hs  Commands.hs  HelpText.hs  Log.hs  Main.hs  Types.hs  Util.hs
src/ADL/: Config.hs  Nginx.hs  Release.hs  State.hs  Types.hs
src/Blobs/: S3.hs  Secrets.hs
src/Commands/: LetsEncrypt.hs  ProxyMode.hs
src/Commands/ProxyMode/: LocalState.hs  RemoteState.hs  Types.hs
src/Util/: Aws.hs
src/Util/Aws/: S3.hs
templates/: camus2_basic.yaml  camus2_proxy.yaml  camus2_remote-state.yaml  example_deploy_noproxy.json  example_deploy_simpleproxy.json
tests/: .gitignore
tests/demo/: demo.sh
tests/demo/development/: dev.sh  infra.sh  tool-config.json
tests/demo/development/releaseSource/: zip.sh
tests/demo/development/releaseSource/release-xx-yy-zz/: go.sh  release.json  template.json.tpl
tests/demo/s3/configSources/: configsrcW.json  configsrcX.json  configsrcY.json  processorConfigHeavy.json  processorConfigLight.json  queueConfigActive.json  queueConfigInactive.json
tests/demo/s3/releaseZips/: .gitignore
typescript/: config.ts  types.ts
