name:                camus2
version:             0.14
synopsis:            Tool to facilitate unpacking and configuring helix software releases
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:              Tim Docker
maintainer:          timd@helixta.com.au
copyright:           2017 Helix
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

data-files:            docs/help.md
                     , config/nginx.conf.tpl

executable c2
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ADL.Core
                     , ADL.Core.Value
                     , ADL.Core.StringMap
                     , ADL.Core.Nullable
                     , ADL.Config
                     , ADL.Nginx
                     , ADL.Release
                     , ADL.State
                     , ADL.Sys.Types
                     , ADL.Types
                     , Blobs
                     , Blobs.Secrets
                     , Commands
                     , Commands.LetsEncrypt
                     , Commands.ProxyMode
                     , Commands.ProxyMode.Types
                     , Commands.ProxyMode.LocalState
                     , Commands.ProxyMode.RemoteState
                     , HelpText
                     , Log
                     , Paths_camus2
                     , Types
                     , Util
                     , Util.Aws
                     , Util.Aws.S3
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0 && < 1.5
                     , amazonka >= 1.4 && < 1.7
                     , amazonka-core >= 1.4 && < 1.7
                     , amazonka-ecr >= 1.4 && < 1.7
                     , amazonka-route53 >= 1.4.5 && < 1.7
                     , amazonka-s3 >= 1.4 && < 1.7
                     , amazonka-secretsmanager >= 1.4 && < 1.7
                     , base64-bytestring >= 1.0 && < 1.1
                     , binary >= 0.8.5.1 && < 0.9
                     , bytestring >= 0.10 && < 0.11
                     , conduit >= 1.2.9 && < 1.4
                     , conduit-extra >= 1.1.1 && < 1.4
                     , containers >= 0.5.7 && < 0.7
                     , directory >= 1.3 && < 1.4
                     , exceptions >= 0.8.3 && < 0.11
                     , filepath >= 1.4 && < 1.5
                     , file-embed >= 0.0.10.1 && < 0.0.12
                     , hostname == 1.0
                     , http-types >= 0.9.1 && < 0.13
                     , http-client >= 0.5.11 && < 0.6
                     , lens >= 4.15 && < 4.18
                     , mustache >= 2.0 && < 2.4
                     , mtl >= 2.2.2 && < 2.3
                     , network-uri >= 2.6 && < 2.7
                     , network-info >= 0.2.0.10 && < 0.3
                     , path >= 0.5 && < 0.7
                     , process >= 1.4.3 && < 1.7
                     , resourcet >= 1.1.9 && < 1.3
                     , scientific >= 0.3.4 && < 0.4
                     , text >= 1.2 && < 1.3
                     , time >= 1.8 && < 1.10
                     , unix >= 2.7 && < 2.8
                     , unordered-containers >= 0.2.7 && < 0.3
                     , vector >= 0.11 && < 0.13
                     , yaml >= 0.11 && < 0.12
                     , zip >= 0.1.9 && < 1.3
