name:                hx-deploy-tool
version:             0.1.0.0
synopsis:            Tool to facilitate unpacking and configuring helix software releases
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:              Tim Docker
maintainer:          timd@helixta.com.au
copyright:           2017 Helix
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hx-deploy-tool
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ADL.Core
                     , ADL.Core.Value
                     , ADL.Config
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0 && < 1.1
                     , base64-bytestring >= 1.0 && < 1.1
                     , bytestring >= 0.10 && < 0.11
                     , containers >= 0.5.7 && < 0.6
                     , filepath >= 1.4 && < 1.5
                     , scientific >= 0.3.4 && < 0.4
                     , text >= 1.2 && < 1.3
                     , unordered-containers >= 0.2.7 && < 0.3
                     , vector >= 0.11 && < 0.12
