name:                hx-deploy-tool
version:             0.1.0.0
synopsis:            Tool to facilitate unpacking and configuring helix software releases
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:              Tim Docker
maintainer:          timd@helixta.com.au
copyright:           2017 Helix
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hx-deploy-tool
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ADL.Core
                     , ADL.Core.Value
                     , ADL.Config
                     , ADL.Release
                     , ADL.Types
                     , Commands
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0 && < 1.1
                     , amazonka >= 1.4 && < 1.5
                     , amazonka-core >= 1.4 && < 1.5
                     , amazonka-s3 >= 1.4 && < 1.5
                     , base64-bytestring >= 1.0 && < 1.1
                     , bytestring >= 0.10 && < 0.11
                     , conduit >= 1.2.9 && < 1.3
                     , conduit-extra >= 1.1.1 && < 1.2
                     , containers >= 0.5.7 && < 0.6
                     , directory >= 1.3 && < 1.4
                     , exceptions >= 0.8.3 && < 0.9
                     , filepath >= 1.4 && < 1.5
                     , http-types >= 0.9.1 && < 0.10.0
                     , lens >= 4.15 && < 4.16
                     , mustache >= 2.0 && < 2.2
                     , path >= 0.5 && < 0.6
                     , process >= 1.4.3 && < 1.5
                     , resourcet >= 1.1.9 && < 1.2
                     , scientific >= 0.3.4 && < 0.4
                     , text >= 1.2 && < 1.3
                     , unix >= 2.7 && < 2.8
                     , unordered-containers >= 0.2.7 && < 0.3
                     , vector >= 0.11 && < 0.12
                     , zip >= 0.1.9 && < 0.2
