name:                hx-deploy-tool
version:             0.1.0.0
synopsis:            Tool to facilitate unpacking and configuring helix software releases
-- description:
homepage:
license:             BSD3
license-file:        LICENSE
author:              Tim Docker
maintainer:          timd@helixta.com.au
copyright:           2017 Helix
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

data-files:          doc/help.md

executable hx-deploy-tool
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ADL.Core
                     , ADL.Core.Value
                     , ADL.Core.StringMap
                     , ADL.Config
                     , ADL.Release
                     , ADL.State
                     , ADL.Sys.Types
                     , ADL.Types
                     , Commands
                     , Commands.LetsEncrypt
                     , Commands.ProxyMode
                     , HelpText
                     , Types
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0 && < 1.3
                     , amazonka >= 1.4 && < 1.6
                     , amazonka-core >= 1.4 && < 1.6
                     , amazonka-ecr >= 1.4 && < 1.6
                     , amazonka-route53 >= 1.4.5 && < 1.6
                     , amazonka-s3 >= 1.4 && < 1.6
                     , base64-bytestring >= 1.0 && < 1.1
                     , bytestring >= 0.10 && < 0.11
                     , conduit >= 1.2.9 && < 1.4
                     , conduit-extra >= 1.1.1 && < 1.4
                     , containers >= 0.5.7 && < 0.6
                     , directory >= 1.3 && < 1.4
                     , exceptions >= 0.8.3 && < 0.9
                     , filepath >= 1.4 && < 1.5
                     , file-embed >= 0.0.10.1 && < 0.0.11
                     , http-types >= 0.9.1 && < 0.13
                     , lens >= 4.15 && < 4.17
                     , mustache >= 2.0 && < 2.4
                     , mtl >= 2.2.2 && < 2.3
                     , path >= 0.5 && < 0.7
                     , process >= 1.4.3 && < 1.7
                     , resourcet >= 1.1.9 && < 1.3
                     , scientific >= 0.3.4 && < 0.4
                     , text >= 1.2 && < 1.3
                     , time >= 1.8 && < 1.10
                     , unix >= 2.7 && < 2.8
                     , unordered-containers >= 0.2.7 && < 0.3
                     , vector >= 0.11 && < 0.13
                     , zip >= 0.1.9 && < 1.1
